--- a/src/res/gui/gui.properties
+++ b/src/res/gui/gui.properties
@@ -1,3 +1,6 @@
 Display--file=display_layout.xml
 Display/new--file=display_new_layout.xml
 DeckEditor--file=deck_editor_layout.xml
+CardPanel/font=Dialog
+CardDetailPanel/font=Dialog
+DeckEditor/CardTable/font=Dialog
