--- a/src/pom.xml
+++ b/src/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>forge</groupId>
@@ -137,8 +138,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>2.1.2</version>
-
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -212,7 +213,7 @@
                     <failOnError>false</failOnError>
                     <detectOfflineLinks>false</detectOfflineLinks>
                 </configuration>
-                <!--<reportSets>
+                <reportSets>
                     <reportSet>
                         <configuration>
                             <quiet>true</quiet>
@@ -223,7 +224,7 @@
                             <report>javadoc</report>
                         </reports>
                     </reportSet>
-                </reportSets>  -->
+                </reportSets>
             </plugin>
 
             <plugin>
@@ -234,16 +235,6 @@
     </reporting>
 
     <dependencies>
-        <dependency>
-            <groupId>com.google.code.maven-svn-wagon</groupId>
-            <artifactId>maven-svn-wagon</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bluestemsoftware.open.maven.plugin</groupId>
-            <artifactId>launch4j-plugin</artifactId>
-            <version>1.5.0.0</version>
-        </dependency>
         <dependency>
             <groupId>com.miglayout</groupId>
             <artifactId>miglayout</artifactId>
@@ -265,9 +256,9 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>net.sourceforge.jarbundler</groupId>
-            <artifactId>jarbundler</artifactId>
-            <version>2.2.0</version>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.3.1</version>
         </dependency>
     </dependencies>
 
@@ -319,7 +310,14 @@
                     <plugin>
                         <groupId>com.akathist.maven.plugins.launch4j</groupId>
                         <artifactId>launch4j-maven-plugin</artifactId>
-                        <version>1.3</version>
+                        <version>1.3.3</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.bluestemsoftware.open.maven.plugin</groupId>
+                                <artifactId>launch4j-plugin</artifactId>
+                                <version>1.5.0.0</version>
+                            </dependency>
+                        </dependencies>
                         <executions>
                             <execution>
                                 <id>l4j-gui</id>
@@ -331,8 +329,9 @@
                                     <headerType>gui</headerType>
                                     <outfile>${project.build.directory}/forge.exe</outfile>
                                     <jar>
-                                        ${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar
+                                        ${project.build.finalName}-jar-with-dependencies.jar
                                     </jar>
+                                    <dontWrapJar>true</dontWrapJar>
                                     <errTitle>forge</errTitle>
                                     <icon>${basedir}/build/forge.ico</icon>
                                     <classPath>
@@ -352,7 +351,7 @@
                                         <txtProductVersion>1.0.0.0</txtProductVersion>
                                         <productName>Forge</productName>
                                         <internalName>forge</internalName>
-                                        <originalFilename>original.exe</originalFilename>
+                                        <originalFilename>forge.exe</originalFilename>
                                     </versionInfo>
                                 </configuration>
                             </execution>
@@ -371,39 +370,49 @@
                                 <artifactId>ant-nodeps</artifactId>
                                 <version>1.7.1</version>
                             </dependency>
+                            <dependency>
+                                <groupId>net.sourceforge.jarbundler</groupId>
+                                <artifactId>jarbundler</artifactId>
+                                <version>2.2.0</version>
+                            </dependency>
                         </dependencies>
                         <executions>
                             <execution>
                                 <id>win-linux-app-bundle</id>
                                 <phase>package</phase>
                                 <configuration>
-                                    <tasks>
+                                    <target>
                                         <!-- Windows/Linux archive -->
-                                        <mkdir dir="${project.build.directory}/${project.build.finalName}" />
+                                        <mkdir dir="${project.build.directory}/${project.build.finalName}"/>
                                         <copy todir="${project.build.directory}/${project.build.finalName}">
-                                            <fileset dir="${project.build.directory}" includes="forge.sh" />
-                                            <fileset dir="${basedir}" includes="forge.properties" />
-                                            <fileset dir="${basedir}" includes="LICENSE.txt" />
-                                            <fileset dir="${basedir}" includes="README.txt" />
-                                            <fileset dir="${basedir}" includes="CHANGES.txt" />
-                                            <fileset dir="${basedir}" includes="res/**" />
-                                            <fileset dir="${project.build.directory}" includes="forge.exe" />
-                                            <fileset dir="${project.build.directory}" includes="${project.build.finalName}-jar-with-dependencies.jar" />
+                                            <fileset dir="${project.build.directory}" includes="forge.sh"/>
+                                            <fileset dir="${basedir}" includes="forge.properties"/>
+                                            <fileset dir="${basedir}" includes="LICENSE.txt"/>
+                                            <fileset dir="${basedir}" includes="README.txt"/>
+                                            <fileset dir="${basedir}" includes="CHANGES.txt"/>
+                                            <fileset dir="${basedir}" includes="res/**"/>
+                                            <fileset dir="${project.build.directory}" includes="forge.exe"/>
+                                            <fileset dir="${project.build.directory}"
+                                                     includes="${project.build.finalName}-jar-with-dependencies.jar"/>
                                         </copy>
-                                        <chmod file="${project.build.directory}/${project.build.finalName}/forge.sh" perm="a+rx" />
-                                        <chmod file="${project.build.directory}/${project.build.finalName}/forge.exe" perm="a+rx" />
-                                        <tar destfile="${project.build.directory}/${project.build.finalName}.tar.bz2" compression="bzip2">
-                                            <tarfileset filemode="755" dir="${project.build.directory}/${project.build.finalName}">
-                                                <include name="forge.sh" />
-                                                <include name="forge.exe" />
+                                        <chmod file="${project.build.directory}/${project.build.finalName}/forge.sh"
+                                               perm="a+rx"/>
+                                        <chmod file="${project.build.directory}/${project.build.finalName}/forge.exe"
+                                               perm="a+rx"/>
+                                        <tar destfile="${project.build.directory}/${project.build.finalName}.tar.bz2"
+                                             compression="bzip2">
+                                            <tarfileset filemode="755"
+                                                        dir="${project.build.directory}/${project.build.finalName}">
+                                                <include name="forge.sh"/>
+                                                <include name="forge.exe"/>
                                             </tarfileset>
                                             <tarfileset dir="${project.build.directory}/${project.build.finalName}">
-                                                <include name="**" />
-                                                <exclude name="forge.sh" />
-                                                <exclude name="forge.exe" />
+                                                <include name="**"/>
+                                                <exclude name="forge.sh"/>
+                                                <exclude name="forge.exe"/>
                                             </tarfileset>
                                         </tar>
-                                    </tasks>
+                                    </target>
                                 </configuration>
                                 <goals>
                                     <goal>run</goal>
@@ -477,6 +486,11 @@
                                 <artifactId>ant-nodeps</artifactId>
                                 <version>1.7.1</version>
                             </dependency>
+                            <dependency>
+                                <groupId>net.sourceforge.jarbundler</groupId>
+                                <artifactId>jarbundler</artifactId>
+                                <version>2.2.0</version>
+                            </dependency>
                         </dependencies>
                         <executions>
                             <execution>
@@ -484,26 +498,37 @@
                                 <phase>package</phase>
                                 <configuration>
                                     <target>
-                                        <mkdir dir="${project.build.directory}/${project.build.finalName}-osx" />
+                                        <mkdir dir="${project.build.directory}/${project.build.finalName}-osx"/>
                                         <copy todir="${project.build.directory}/${project.build.finalName}-osx">
-                                            <fileset dir="${basedir}" includes="LICENSE.txt" />
-                                            <fileset dir="${basedir}" includes="README.txt" />
-                                            <fileset dir="${basedir}" includes="CHANGES.txt" />
+                                            <fileset dir="${basedir}" includes="LICENSE.txt"/>
+                                            <fileset dir="${basedir}" includes="README.txt"/>
+                                            <fileset dir="${basedir}" includes="CHANGES.txt"/>
                                         </copy>
-                                        <taskdef name="jarbundler" classpathref="maven.runtime.classpath" classname="net.sourceforge.jarbundler.JarBundler" />
-                                        <jarbundler dir="${project.build.directory}/${project.build.finalName}-osx" name="${project.name}" version="${project.version}" mainclass="forge.Gui_NewGame" icon="${basedir}/build/Forge.icns" jvmversion="1.5+" vmoptions="-Xmx1024m" shortname="${project.name}" workingdirectory="$APP_PACKAGE/Contents/Resources/Java" jar="${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar">
-                                            <javafileset dir="${basedir}" includes="*.properties" />
-                                            <javafileset dir="${basedir}" includes="res/**" />
-                                            <javaproperty name="apple.laf.useScreenMenuBar" value="true" />
+                                        <taskdef name="jarbundler" classpathref="maven.runtime.classpath"
+                                                 classname="net.sourceforge.jarbundler.JarBundler"/>
+                                        <jarbundler dir="${project.build.directory}/${project.build.finalName}-osx"
+                                                    name="${project.name}" version="${project.version}"
+                                                    mainclass="forge.Gui_NewGame" icon="${basedir}/build/Forge.icns"
+                                                    jvmversion="1.5+" vmoptions="-Xmx1024m" shortname="${project.name}"
+                                                    workingdirectory="$APP_PACKAGE/Contents/Resources/Java"
+                                                    jar="${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar">
+                                            <javafileset dir="${basedir}" includes="*.properties"/>
+                                            <javafileset dir="${basedir}" includes="res/**"/>
+                                            <javaproperty name="apple.laf.useScreenMenuBar" value="true"/>
                                         </jarbundler>
-                                        <symlink link="${project.build.directory}/${project.build.finalName}-osx/Applications" resource="/Applications" />
+                                        <symlink
+                                                link="${project.build.directory}/${project.build.finalName}-osx/Applications"
+                                                resource="/Applications"/>
                                         <exec executable="${basedir}/build/create-dmg" failonerror="false">
-                                            <arg line="--volname ${project.name}-${project.version} --background ${basedir}/build/backgroundImage.jpg --window-size 700 419 --icon-size 64 --icon ${forge.file.name} 141 283 --icon ${applications.file.name} 452 283 --icon ${changes.file.name} 645 80 --icon ${license.file.name} 645 200 --icon ${readme.file.name} 645 320 ${project.build.directory}/${project.build.finalName}.dmg ${project.build.directory}/${project.build.finalName}-osx" />
+                                            <arg line="--volname ${project.name}-${project.version} --background ${basedir}/build/backgroundImage.jpg --window-size 700 419 --icon-size 64 --icon ${forge.file.name} 141 283 --icon ${applications.file.name} 452 283 --icon ${changes.file.name} 645 80 --icon ${license.file.name} 645 200 --icon ${readme.file.name} 645 320 ${project.build.directory}/${project.build.finalName}.dmg ${project.build.directory}/${project.build.finalName}-osx"/>
                                         </exec>
-                                        <tar basedir="${project.build.directory}" includes="${project.build.finalName}.dmg" destfile="${project.build.directory}/${project.build.finalName}.osx.tar.bz2" compression="bzip2" />
+                                        <tar basedir="${project.build.directory}"
+                                             includes="${project.build.finalName}.dmg"
+                                             destfile="${project.build.directory}/${project.build.finalName}.osx.tar.bz2"
+                                             compression="bzip2"/>
                                         <!--<symlink link="${project.build.directory}/${project.build.finalName}-osx/Applications" action="delete" />-->
                                         <exec executable="rm" failonerror="false">
-                                            <arg line="-f ${project.build.directory}/${project.build.finalName}-osx/Applications" />
+                                            <arg line="-f ${project.build.directory}/${project.build.finalName}-osx/Applications"/>
                                         </exec>
                                     </target>
                                 </configuration>
