--- a/src/pom.xml
+++ b/src/pom.xml
@@ -311,13 +311,13 @@
                         <groupId>com.akathist.maven.plugins.launch4j</groupId>
                         <artifactId>launch4j-maven-plugin</artifactId>
                         <version>1.3.3</version>
-                        <dependencies>
+                        <!--<dependencies>
                             <dependency>
                                 <groupId>org.bluestemsoftware.open.maven.plugin</groupId>
                                 <artifactId>launch4j-plugin</artifactId>
                                 <version>1.5.0.0</version>
                             </dependency>
-                        </dependencies>
+                        </dependencies> -->
                         <executions>
                             <execution>
                                 <id>l4j-gui</id>
@@ -341,14 +341,15 @@
                                     </classPath>
                                     <jre>
                                         <minVersion>1.5.0</minVersion>
+                                        <maxHeapSize>1024</maxHeapSize>
                                     </jre>
                                     <versionInfo>
-                                        <fileVersion>1.0.0.0</fileVersion>
-                                        <txtFileVersion>1.0.0.0</txtFileVersion>
+                                        <fileVersion>1.0.15.0</fileVersion>
+                                        <txtFileVersion>1.0.15.0</txtFileVersion>
                                         <fileDescription>Forge</fileDescription>
                                         <copyright>Forge</copyright>
-                                        <productVersion>1.0.0.0</productVersion>
-                                        <txtProductVersion>1.0.0.0</txtProductVersion>
+                                        <productVersion>1.0.15.0</productVersion>
+                                        <txtProductVersion>1.0.15.0</txtProductVersion>
                                         <productName>Forge</productName>
                                         <internalName>forge</internalName>
                                         <originalFilename>forge.exe</originalFilename>
