--- a/src/pom.xml
+++ b/src/pom.xml
@@ -139,11 +139,7 @@
                 <version>2.5</version>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.6</version>
-            </plugin>
+
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
@@ -231,6 +227,8 @@
                     <quiet>true</quiet>
                     <failOnError>false</failOnError>
                     <detectOfflineLinks>false</detectOfflineLinks>
+                    <show>package</show>
+                    <level>package</level>
                 </configuration>
                 <reportSets>
                     <reportSet>
@@ -247,10 +245,14 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.6</version>
-            </plugin>
-        </plugins>
+                <configuration>
+                    <configLocation>${basedir}/config/forge_checks.xml</configLocation>
+                </configuration>
+        </plugin>
+</plugins>
     </reporting>
 
     <dependencies>
