--- a/src/.classpath
+++ b/src/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="res/lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="res/lib/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="res/lib/java-yield-1.0-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
