--- a/src/pom.xml
+++ b/src/pom.xml
@@ -163,6 +163,7 @@
                     <tagBase>
                         https://cardforge.googlecode.com/svn/tags
                     </tagBase>
+                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                 </configuration>
             </plugin>
             <plugin>
@@ -571,14 +572,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-site-plugin</artifactId>
-                        <version>2.3</version>
-                        <configuration>
-                            <port>8081</port>
-                        </configuration>
-                    </plugin>
+
                     <plugin>
                         <artifactId>maven-antrun-plugin</artifactId>
                         <dependencies>
