--- a/src/res/main.properties
+++ b/src/res/main.properties
@@ -3,6 +3,7 @@ program/forum=http://www.slightlymagic.net/forum/viewforum.php?f=26
 program/version=Forge -- official beta: $Date$, SVN revision: $Revision$
 
 showdeck/2color=false
+showdeck/3color=false
 
 tokens--file=AllTokens.txt
 
