--- a/src/.classpath
+++ b/src/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="res/lib/napkinlaf-1.2.jar"/>
 	<classpathentry kind="lib" path="res/lib/nimrodlf.jar"/>
 	<classpathentry kind="lib" path="res/lib/substance.jar"/>
@@ -11,7 +10,9 @@
 	<classpathentry kind="lib" path="res/lib/jl1.0.1.jar"/>
 	<classpathentry kind="lib" path="res/lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="res/lib/xpp3_min-1.1.4c.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="res/lib/java-yield-1.0-SNAPSHOT-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="res/lib/swingx-1.6.1.jar"/>
+	<classpathentry kind="lib" path="res/lib/testng-6.0.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
