--- a/src/.classpath
+++ b/src/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="res/lib/swingx-1.6.1.jar"/>
 	<classpathentry kind="lib" path="res/lib/testng-6.0.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)"/>
+	<classpathentry kind="lib" path="res/lib/minlog-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
