--- a/src/pom.xml
+++ b/src/pom.xml
@@ -473,6 +473,11 @@
             <artifactId>swingx</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode</groupId>
+            <artifactId>minlog</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
