--- a/src/.classpath
+++ b/src/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM Contents (MacOS X Default)"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="res/lib/napkinlaf-1.2.jar"/>
 	<classpathentry kind="lib" path="res/lib/nimrodlf.jar"/>
@@ -13,7 +14,6 @@
 	<classpathentry kind="lib" path="res/lib/java-yield-1.0-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="res/lib/swingx-1.6.1.jar"/>
 	<classpathentry kind="lib" path="res/lib/testng-6.0.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)"/>
 	<classpathentry kind="lib" path="res/lib/minlog-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
