--- a/src/pom.xml
+++ b/src/pom.xml
@@ -157,6 +157,20 @@
         </testResources>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>released-version</id>
+                        <goals>
+                            <goal>released-version</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.1</version>
                 <configuration>
@@ -561,12 +575,12 @@
                                         <maxHeapSize>1024</maxHeapSize>
                                     </jre>
                                     <versionInfo>
-                                        <fileVersion>1.0.15.0</fileVersion>
-                                        <txtFileVersion>1.0.15.0</txtFileVersion>
+                                        <fileVersion>${releasedVersion.version}.0</fileVersion>
+                                        <txtFileVersion>${releasedVersion.version}.0</txtFileVersion>
                                         <fileDescription>Forge</fileDescription>
                                         <copyright>Forge</copyright>
-                                        <productVersion>1.0.15.0</productVersion>
-                                        <txtProductVersion>1.0.15.0</txtProductVersion>
+                                        <productVersion>${releasedVersion.version}.0</productVersion>
+                                        <txtProductVersion>${releasedVersion.version}.0</txtProductVersion>
                                         <productName>Forge</productName>
                                         <internalName>forge</internalName>
                                         <originalFilename>forge.exe</originalFilename>
