--- a/src/pom.xml
+++ b/src/pom.xml
@@ -487,6 +487,11 @@
             <artifactId>minlog</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>xpp3</groupId>
+            <artifactId>xpp3_min</artifactId>
+            <version>1.1.4c</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
