Re-integrate substance.jar. This highlights a problem with dependency management. Maven has no problem with newer versions of the library since it automatically pulls in the deps. Eclipse (without using the Maven plugin) and the svn bat script forces the use of an older dep since the older version of substance has everything bundled in.

--- a/src/pom.xml
+++ b/src/pom.xml
@@ -470,7 +470,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.0.1</version>
-            <scope>test</scope>
+            <!--<scope>test</scope> -->
         </dependency>
         <dependency>
             <groupId>com.google.code.jyield</groupId>
@@ -488,9 +488,9 @@
             <version>1.2</version>
         </dependency>
         <dependency>
-            <groupId>xpp3</groupId>
-            <artifactId>xpp3_min</artifactId>
-            <version>1.1.4c</version>
+            <groupId>org.java.net.substance</groupId>
+            <artifactId>substance</artifactId>
+            <version>5.3</version>
         </dependency>
     </dependencies>
 
