--- a/src/.classpath
+++ b/src/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="res/lib/testng-6.0.1.jar"/>
 	<classpathentry kind="lib" path="res/lib/minlog-1.2.jar"/>
 	<classpathentry kind="lib" path="res/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="res/lib/substance-5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
