--- a/src/build.xml
+++ b/src/build.xml
@@ -4,15 +4,14 @@
     <property name="source" value="1.5"/>
     <path id="Forge.classpath">
         <pathelement location="bin"/>
-        <pathelement location="res/lib/napkinlaf-1.2.jar"/>
-        <pathelement location="res/lib/nimrodlf.jar"/>
-        <pathelement location="res/lib/substance.jar"/>
         <pathelement location="res/lib/java-image-scaling-0.8.4.jar"/>
         <pathelement location="res/lib/google-collections-1.0.jar"/>
         <pathelement location="res/lib/miglayout-3.7.3.1-swing.jar"/>
-        <pathelement location="res/lib/jl1.0.1.jar"/>
-    	<pathelement location="res/lib/xstream-1.3.1.jar"/>
-    	<pathelement location="res/lib/xpp3_min-1.1.4c.jar"/>
+        <pathelement location="res/lib/xstream-1.3.1.jar"/>
+        <pathelement location="res/lib/xpp3_min-1.1.4c.jar"/>
+        <pathelement location="res/lib/minlog-1.2.jar"/>
+        <pathelement location="res/lib/java-yield-1.0-SNAPSHOT-jar-with-dependencies.jar"/>
+        <pathelement location="res/lib/swingx-1.6.1.jar"/>
     </path>
     <target name="init">
     	<tstamp/>
@@ -56,15 +55,14 @@
 	                <attribute name="Class-Path" value="."/>
 	            </manifest>
 	            <fileset dir="bin"/>
-	            <zipfileset excludes="META-INF/*.SF" src="res/lib/napkinlaf-1.2.jar"/>
-	            <zipfileset excludes="META-INF/*.SF" src="res/lib/nimrodlf.jar"/>
-	            <zipfileset excludes="META-INF/*.SF" src="res/lib/substance.jar"/>
 	            <zipfileset excludes="META-INF/*.SF" src="res/lib/java-image-scaling-0.8.4.jar"/>
 	            <zipfileset excludes="META-INF/*.SF" src="res/lib/google-collections-1.0.jar"/>
 	            <zipfileset excludes="META-INF/*.SF" src="res/lib/miglayout-3.7.3.1-swing.jar"/>
-	            <zipfileset excludes="META-INF/*.SF" src="res/lib/jl1.0.1.jar"/>
-	    		<zipfileset excludes="META-INF/*.SF" src="res/lib/xstream-1.3.1.jar"/>
-	    	    <zipfileset excludes="META-INF/*.SF" src="res/lib/xpp3_min-1.1.4c.jar"/>
+	            <zipfileset excludes="META-INF/*.SF" src="res/lib/xstream-1.3.1.jar"/>
+	            <zipfileset excludes="META-INF/*.SF" src="res/lib/xpp3_min-1.1.4c.jar"/>
+              <zipfileset excludes="META-INF/*.SF" src="res/lib/java-yield-1.0-SNAPSHOT-jar-with-dependencies.jar"/>
+              <zipfileset excludes="META-INF/*.SF" src="res/lib/swingx-1.6.1.jar"/>
+              <zipfileset excludes="META-INF/*.SF" src="res/lib/minlog-1.2.jar"/>
 	        </jar>
 	    </target>
 
